feat: add gallery route and discord js integration
